[project]
name = "agentic-workflow-kb"
version = "0.1.0"
description = "Local WhatsApp export ingestion, scraping, and knowledge-base tooling for agentic workflow research."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "browserforge>=1.2.4",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.0",
    "playwright>=1.59.0",
    "pypdf>=5.0.0",
    "pywinpty>=3.0.3",
    "scrapling>=0.2.0",
]

[tool.uv]
package = false

